--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <canvas id="canvas" width="500" height="500">
         Your browser does not support the HTML5 canvas tag.
     </canvas>
-    <textarea name="output" id="output"></textarea>
+    <textarea name="output" id="output" rows="27" cols="10"></textarea>
     <script src="./script.js"></script>
 </body>
 </html>
