--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         Your browser does not support the HTML5 canvas tag.
     </canvas>
     <textarea name="output" id="output" rows="27" cols="10"></textarea>
+    <input type="text" id="fontName" placeholder="font name" value="Helvetica">
     <script src="./script.js"></script>
 </body>
 </html>
