implemente displaying render images instead of using canvas

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <canvas id="canvas" width="500" height="500">
-        Your browser does not support the HTML5 canvas tag.
-    </canvas>
+    <img id="char">
     <textarea name="output" id="output" rows="27" cols="10"></textarea>
     <input type="text" id="fontName" placeholder="font name" value="Helvetica">
     <script src="./script.js"></script>
