implemented basic following circle

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div id="maxDiameterCircle"></div>
     <img id="char">
     <textarea name="output" id="output" rows="27" cols="10"></textarea>
-    <input type="text" id="fontName" placeholder="font name" value="Helvetica">
+
     <script src="./script.js"></script>
 </body>
 </html>
